Pushing from local

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <title>CodeHustle | It's a movement</title>
   </head>
   <body>
     <h1>Welcome to CodeHustle!</h1>
+    <h3>Let get to coding</h3>
   </body>
 </html>
