--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Welcome to CodeHustle!</h1>
     <h3>Let get to coding</h3>
-    <h4>Deployed from Netlify</h4>
+    <h4>Local Push</h4>
   </body>
 </html>
+type
